<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exhibit_items"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toTopOf="@+id/plan_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="275dp"
        android:layout_height="43dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="57dp"
        android:hint="Find an exhibitModel..."
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plan_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="198dp"
        android:layout_height="54dp"
        android:onClick="planBtnOnClickListener"
        android:text="Plan"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="37dp"
        android:layout_height="20dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="0"
        android:textAlignment="center"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/exhibit_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="39dp"
        android:text="Selected: "
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/exhibit_items"
        app:layout_constraintEnd_toStartOf="@+id/counter"
        app:layout_constraintStart_toEndOf="@+id/search_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/Show_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="9dp"
        android:text="Show All Selected Exhibits"
        app:layout_constraintBottom_toTopOf="@+id/exhibit_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toEndOf="@+id/exhibit_items"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintVertical_bias="0.581" />


</androidx.constraintlayout.widget.ConstraintLayout>