...
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:onClick="onSummaryButton"
        android:paddingVertical="15dp"
        android:text="Summary"
        app:layout_constraintBottom_toTopOf="@+id/deletePlan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brief_direction_button" />

    <Button
        android:id="@+id/deletePlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:onClick="onDeletePlan"
        android:text="Delete Plan"
        app:layout_constraintStart_toStartOf="@+id/summary_button"
        app:layout_constraintTop_toBottomOf="@+id/summary_button" />

    <EditText
        android:id="@+id/latitiude_input"
        android:layout_width="wrap_content"
...
