<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DirectionListActivity">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/holo_green_dark"
        android:hint="Back"
        android:onClick="onPreviousButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/direction_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_display"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="124dp"
        android:background="@android:color/holo_green_dark"
        android:hint="Next or Finish"
        android:onClick="onNextButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/direction_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:background="@android:color/holo_green_dark"
        android:gravity="center"
        android:text="Directions"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/prev_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Previous Exhibit: "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direction_title" />

    <TextView
        android:id="@+id/next_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next Exhibit: "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prev_display" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="onSkipButtonClicked"
        android:text="Skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/next_button"
        app:layout_constraintTop_toBottomOf="@+id/direction_items" />

    <ImageButton
        android:id="@+id/setting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp"
        android:onClick="onSettingButtonClicked"
        app:layout_constraintBottom_toBottomOf="@+id/direction_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/direction_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <ImageButton
        android:id="@+id/reload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onReloadClicked"
        app:layout_constraintBottom_toTopOf="@+id/prev_display"
        app:layout_constraintEnd_toStartOf="@+id/direction_title"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/direction_title"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/stat_notify_sync_noanim" />

</androidx.constraintlayout.widget.ConstraintLayout>