<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <TextView
        android:id="@+id/direction_item_text"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_green_dark"
        android:gravity="center"
        android:hint="direction list item"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>